heade component added

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,50 +1,11 @@
-/* body {
-    background-color: white;
-  }
-  
-  .navbar-card {
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    
-    padding: 100px;
-    top: 0;
-    bottom: 30px;
-    left: 0;
-    height: 100%;
-    width: 200px;
-    
-  }
-  
-  .ant-card-body {
-    padding: 16px;
-    background: linear-gradient(to top, #8e2de2, #4a00e0);
-    color: white;
-    width: 300px;
-    height: 500px;
-   
-  }
-  
-  .ant-list-item {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    cursor: pointer;
-    color: white;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  .ant-list-item:hover {
-    transform: scale(1.05);
-  } */
+
 
   .test_ctn {
     width: 100vw;
     height: 100vh;
     display: flex;
     padding: 50px;
-    /* background-color: #f2f2f2; */
+    
   }
   
   .test_nav {
@@ -71,7 +32,7 @@
     background-color: transparent; 
   }
   .test_nav_link:hover {
-    color: #ffffff; /* set text color to white */
+    color: #ffffff; 
   }
   
   .test_nav_link_blob {
@@ -82,11 +43,11 @@
     border-radius: 100px;
     padding: 6px;
     right: -10px;
-    opacity: 0; /* hide blob by default */
+    opacity: 0; 
   transition: opacity 0.2s ease-in-out;
   }
   .test_nav_link:hover .test_nav_link_blob {
-    opacity: 1; /* show blob on hover */
+    opacity: 1; 
   }
   
   .test_nav_hr_ctn {
@@ -101,7 +62,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  width: calc(100% - 72px); /* adjust left and right gap */
+  width: calc(100% - 72px); 
   height: 1px;
   border: none;
   background-color: #f2f2f2;
