--- a/src/LandingPage.css
+++ b/src/LandingPage.css
@@ -1,40 +1,32 @@
-/* .map-container {
-    height: 400px;
-    border-radius: 20px;
-    overflow: hidden;
-    margin-top: 20px;
-  }
-  
-  .map-container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  } */
+
   .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh; /* make the container fill the viewport height */
+    min-height: 100vh; 
+    padding-left: 20px;
+    overflow-x: hidden; 
   }
   
-  .container_outline {
+  /* .container_outline {
     display: flex;
     flex-direction: row;
-    justify-content: flex-start; /* change the alignment to start */
-    align-items: stretch; /* stretch the items to fill the container height */
+    justify-content: flex-start; 
+    align-items: stretch; 
     width: 100%;
     max-width: 1200px;
-    margin: 20px auto; /* center the container horizontally */
+    margin: 20px auto; 
     padding: 20px;
     box-sizing: border-box;
-  }
+  } */
   
   .container_1 {
-    flex: 0 0 auto; /* make the Navbar component fixed width */
+    flex: 0 0 auto;
+    
   }
   
   .container_2 {
-    flex: 1 1 auto; /* make the UserProfile component fill the remaining width and height */
+    flex: 1 1 auto; 
   }
   
   .container_3 {
@@ -43,4 +35,37 @@
     margin: 20px auto;
     box-sizing: border-box;
   }
+  /* .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh;
+  }
   
+  .container_outline {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: stretch;
+    width: 100%;
+    max-width: 1200px;
+    margin: 20px auto;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+  
+  .container_1 {
+    flex: 0 0 auto;
+  }
+  
+  .container_2 {
+    flex: 1 1 auto;
+  }
+  
+  .container_3 {
+    width: 100%;
+    max-width: 1200px;
+    margin: 20px auto;
+    box-sizing: border-box;
+  }
+   */
