--- a/src/UserProfile.css
+++ b/src/UserProfile.css
@@ -1,6 +1,7 @@
-.container {
+/* .container {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
   }
@@ -10,6 +11,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+   width: 50%;
   }
   
   .profile-picture {
@@ -56,10 +58,10 @@
   
   .container_2 {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    width: 50%;
   }
   
   .container_address {
@@ -80,4 +82,94 @@
     height: 100%;
     object-fit: cover;
   }
+   */
+   .container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    height:100vh;
+    width:100vw;
+  }
+  
+  .container_1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 45%;
+  
+  }
+  
+  .profile-picture {
+    width: 180px;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+  
+  .container_details {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 20px;
+  }
+  
+  .container_details_username {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+  
+  .container_details_name {
+    margin-bottom: 5px;
+  }
+  
+  .container_details_name_label {
+    color: #999;
+    margin-right: 5px;
+  }
+  
+  .container_details_name strong {
+    color: #333;
+    font-weight: bold;
+  }
+  
+  
+  .container_hr_tag {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border: 0;
+    border-top: 1px solid #ccc;
+  }
+  
+  .container_2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 45%;
+  }
+  
+  .container_address {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  
+  .container_map {
+    width: 600px;
+    height: 400px;
+    margin-left: 20px;
+    overflow: hidden;
+  }
+  
+  .container_map img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  
   
