UI fixes and bug fixes

--- a/src/Header.css
+++ b/src/Header.css
@@ -3,9 +3,8 @@
   justify-content: space-between;
   align-items: center;
   height: 80px;
-  padding: 0 20px;
   background-color: white;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid #aaaaaa;
 }
 
 .header-left {
@@ -14,8 +13,7 @@
 }
 
 .navbar-button {
-  background-color: #0077ff;
-  color: white;
+  color: #202020;
   font-size: 18px;
   font-weight: bold;
   border: none;
@@ -39,7 +37,7 @@
   border-radius: 4px;
 }
 
-.profile-picture {
+.profile-picture-1 {
   width: 40px;
   height: 40px;
   object-fit: cover;
@@ -173,7 +171,7 @@
 }
 
 .card-footer button {
-  background-color: #0077FF;
+  background-color: #0077ff;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -183,7 +181,7 @@
 }
 
 .card-footer button:hover {
-  background-color: #0052CC;
+  background-color: #0052cc;
 }
 
 /* Header */
