--- a/src/App.css
+++ b/src/App.css
@@ -43,20 +43,12 @@
 .card-title {
   color: #ccc;
 }   */
-html,
-body,
-#root {
-  height: 100%;
-}
-
-body {
-  background-color: white;
-  margin: 0;
-}
 
 .app {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100%;
+  width: 100vw;
+  overflow: hidden;
 }
