--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -68,75 +68,72 @@
   background-color: #f2f2f2;
   } */
 
-  .test_ctn {
-    display: flex;
-  justify-content: flex-start;
-  margin-left: 40px;
-    width: 100vw;
-    padding: 50px;
-    flex: 1;
-  }
-  
-  .test_nav {
-    width: 17%;
-    height: 100%;
-    background: linear-gradient(to top, #8e2de2, #4a00e0);
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-  }
-  
-  .test_nav_link {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 16px 36px;
-    color: #a0a0a0;
-    font-size: 20px;
-    border: none;
-    background-color: transparent;
-    transition: color 0.2s ease-in-out;
-  }
-  
-  .test_nav_link:hover {
-    color: #ffffff;
-  }
-  
-  .test_nav_link_blob {
-    position: absolute;
-    background-color: #f2f2f2;
-    width: 32px;
-    height: 32px;
-    border-radius: 100px;
-    padding: 6px;
-    right: -10px;
-    opacity: 0;
-    transition: opacity 0.2s ease-in-out;
-  }
-  
-  .test_nav_link:hover .test_nav_link_blob {
-    opacity: 1;
-  }
-  
-  .test_nav_hr_ctn {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-  }
-  
-  .test_nav_hr {
-    width: calc(100% - 72px);
-    height: 1px;
-    border: none;
-    background-color: #f2f2f2;
-  }
-  
+.test_ctn {
+  margin-top: 60px;
+  margin-left: 60px;
+  min-width: 18%;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.test_nav {
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to top, #8e2de2, #4a00e0);
+  border-radius: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.test_nav_link {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 16px 36px;
+  color: #a0a0a0;
+  font-size: 20px;
+  border: none;
+  background-color: transparent;
+  transition: color 0.2s ease-in-out;
+}
+
+.test_nav_link:hover {
+  color: #ffffff;
+}
+
+.test_nav_link_blob {
+  position: absolute;
+  background-color: #f2f2f2;
+  width: 32px;
+  height: 32px;
+  border-radius: 100px;
+  padding: 6px;
+  right: -10px;
+  opacity: 0;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.test_nav_link:hover .test_nav_link_blob {
+  opacity: 1;
+}
+
+.test_nav_hr_ctn {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.test_nav_hr {
+  width: calc(100% - 72px);
+  height: 1px;
+  border: none;
+  background-color: #f2f2f2;
+}
